--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -48,6 +48,36 @@
                         <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
                         <div class="card-body">{{lesson.content}}</div>
                     </div>
+                {% if user.is_authenticated %}
+                <button data-toggle="collapse" data-target="#exam_{{lesson.pk}}" class=" btn-primary btn-block">Start Exam</button>
+                {% else %}
+                <p>You need to be authenticated to start the exam</p>
+                {% endif %}
+                <div id="exam_{{lesson.pk}}" class="collapse">
+                    <form id="questionform" action="{% url 'onlinecourse:submit' course.pk%}" method="post">
+                        {% csrf_token %}
+
+                        {% for question in lesson.question_set.all %}
+                        <div class="card mt-1">
+                            <div class="card-header">
+                                <h5>{{ question.question_text}}</h5>
+                            </div>
+                            <div class="form-group">
+                                {% for choice in question.choice_set.all %}
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="choice_{{choice.id}}" class="form-check-input"
+                                            id="{{choice.id}}" value="{{choice.id}}">{{ choice.choice_text }}
+                                    </label>
+                                </div>
+                                {% endfor %}
+                            </div>
+
+                        </div>
+                        {% endfor %}
+                        <input class="btn btn-success btn-block" type="submit" value="Submit">
+                    </form>
+                </div>
                 {% endfor %}
             </div>
             <!-- Task: show questions and choices -->
